Front page customization complete

--- a/blog.html
+++ b/blog.html
@@ -138,6 +138,7 @@
     </div>
   </section>
   <!-- End page-hero section -->
+  <!-- Start blog section -->
   <main class="blog-section section-padding">
     <div class="container">
       <div class="row">
@@ -272,7 +273,7 @@
       </div>
     </div>
   </main>
-
+  <!-- End blog section -->
   <!-- End claient -->
   <!-- Start foorter -->
   <footer class="footer">
